fix(malleus): Just wait for the blip process to end.
Reading of the stdout/stderr gets stuck on jenkins, so just wait
for the blip process to end without doing any I/O.